# crypto-dashboard-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  manage.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
accounts/: serializers.py
crypto/: models.py  serializers.py  services.py  urls.py  views.py
crypto/management/commands/: update_crypto_data.py
crypto_dashboard_backend/: asgi.py  settings.py  urls.py  wsgi.py
src/accounts/: tests.py  urls.py  views.py
src/chat/: tests.py  urls.py  views.py
src/coins/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/coins/migrations/: 0001_initial.py  0002_coin_coins_coin_symbol_218346_idx_and_more.py  0003_coin_last_pct_change_24h_coin_last_volume_24h_usd.py  0004_coin_image_url_coin_market_cap_rank_and_more.py
src/config/: settings.py  urls.py
src/crypto_dashboard_backend/: __init__.py  asgi.py  celery.py  celery_app.py  celerybeat_schedule.py  manage.py  settings.py  urls.py  wsgi.py
src/crypto_dashboard_backend/apps/chat/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/crypto_dashboard_backend/apps/crypto/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/crypto_dashboard_backend/apps/crypto/management/: __init__.py
src/crypto_dashboard_backend/apps/crypto/management/commands/: __init__.py  update_crypto_data.py
src/qa/: views.py
