[project]
name = "crypto-dashboard-backend"
version = "0.1.0"
description = "Crypto Dashboard Backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "CoinTrackr" }
]
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "psycopg[binary]>=3.2.10",
    "requests>=2.32.5",
    "uvicorn>=0.30.0",
]

[project.scripts]
crypto-dashboard-backend = "crypto_dashboard_backend:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["B","C90","E","F","I","UP"]
ignore = ["E501"]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist"
]

[tool.pylint.main]
py-version = "3.12"
jobs = 0
recursive = true

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116"  # missing-function-docstring
]


